Wed Dec  1 10:47:15 CET 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/security.c xsltproc/xsltproc.c: applied patch from
	  Aleksey Gurtovoy moving some stat() definition for Windows
	  to the right place.

Wed Dec  1 14:30:22 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/xslt.c: applied patch from Mark Vakoc fixing bug with
	  namespace URI on template names.
	* tests/namespaces/tst9*, tests/namespaces/Makefile.am: added
	  test case for this

Tue Nov 30 10:53:18 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/pattern.c: more on RVT's in XPath predicates, this
	  time for bug 159726.  Cleaned up the logic a little, hopefully
	  now covers all setting of XSLT_RUNTIME_EXTRA.
	* tests/general/bug-158.xsl: corrected a typo

Thu Nov 25 22:24:03 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/variables.c, libxslt/xsltInternals.h: backed out the
	  last change and re-did it the "right way" (bug 158372).
	* tests/general/bug-158.*, tests/general/Makefile.am,
	  tests/docs/bug-158.*, tests/general/Makefile.am: added test
	  case for this bug

Wed Nov 24 10:51:51 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/variables.c, libxslt/xsltInternals.h: enhanced the
	  evaluation of global variables to take account of possible
	  changes to the current document (bug 158372).
	  
Mon Nov 22 08:10:18 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/pattern.c: small change to previous fix for bug 153137,
	  fixes bug 158840.
	* tests/general/bug-157.*, tests/general/Makefile.am,
	  tests/docs/bug-157.*, tests/docs/Makefile.am: added test for this

Sun Nov 21 09:42:22 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: enhanced code to assure the "current
	  template rule" is not changed by xsl:call-template (bug 157859).
	* tests/general/bug-156.*, tests/general/Makefile.am,
	  tests/docs/bug-156.*, tests/docs/Makefile.am: added a test case
	  
Mon Nov  8 11:41:32 HKT 2004 William Brack <wbrack@mmm.com.hk>
